idea/testData/multiModuleHighlighting/multiplatform/basic/jvm/jvm.kt
actual class <error descr="[IMPLEMENTATION_WITHOUT_HEADER] 'impl' class 'Your' has no corresponding 'header' declaration">Your</error> {

}

expect class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] 'header' class 'His' has no implementation in module jvm for JVM">His</error> {

}

expect class Their {

}

actual class Their {

}
